<resources>
    <string name="app_name">DrawView W</string>
    <string name="save_text">Save </string>
    <string name="scan_text">Scan to share</string>
    <string name="setting_text">Settings </string>
    <string name="out_text">Exit</string>
    <string name="vote_button_tx">End voting</string>
    <string name="vote_result_tx">Voting results</string>
    <string name="vote_no_result">No one voted</string>
    <string name="timer_countdown">Countdown </string>
    <string name="timer_stopwatch">Timer </string>
    <string name="timer">Timing </string>
    <string name="unconnect_title">Get failed!</string>
    <string name="unconnect_dialog">Whether to close the current vote?</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="vote_progressDialog_result">To obtain voting results. . . </string>
    <string name="save_5">This machine-internal storage </string>
    <string name="save_title">Prompt </string>
    <string name="save_1">Are you sure to save this record? \n\nSave path:</string>
    <string name="handwriting_recognition">Handwriting recognition</string>
    <string name="optional_word">Alternative word:</string>
    <string name="vote_progressDialog">Get the voting page. . . </string>
    <string name="unconnect">Connection failed, unable to display QR code</string>
    <string name="vote_single_text">Single choice </string>
    <string name="vote_more_text">Multiple choice selection</string>
    <string name="vote_through_text">Vote voting</string>
    <string name="vote_tips_qrcode">Scan QR code to participate in voting</string>
    <string name="code_ok">Complete</string>
    <string name="setting_qrcode_wan">WAN </string>
    <string name="code">Scan the QR code to view the meeting records</string>
    <string name="code_return">Return</string>
    <string name="code_encrypt">Encryption </string>
    <string name="upload_error">Upload failed, please check the network!</string>
    <string name="page_time_text">Blackboard notes-</string>
    <string name="right_auxiliary_board_configuration">Right auxiliary board configuration </string>
    <string name="right_auxiliary_board_configuration_tips">Please swipe on the right auxiliary board to complete the setting </string>
    <string name="about_text">About</string>
    <string name="version">Version number:</string>
    <string name="quit_tips">Are you sure you want to exit the program? </string>
    <string name="yes_and_save">Save and exit </string>
    <string name="exit_directly">Exit</string>
    <string name="record_text">Is recording blackboard notes</string>
    <string name="clean_text">Clear the page</string>
    <string name="save_to">Has been saved to </string>
    <string name="finish_text">Congratulations, you have completed the installation and setup of the Internet Blackboard. After the installation is complete, click the [Pen] shortcut key to start writing and recording. </string>
    <string name="open_btn">Complete the settings </string>
    <string name="connectblackboard">Interconnect blackboard </string>
    <string name="proportiontext">- Proportion setting</string>
    <string name="disfinish_text">Set the width-to-height ratio of the interconnected blackboard writing board to get a better display effect of the blackboard </string>
    <string name="settingnext">Next step</string>
    <string name="settingleft">Left auxiliary board configuration</string>
    <string name="settingright">Right auxiliary board configuration </string>
    <string name="newpage_text">New page</string>
    <string name="page_num">1/8</string>
    <string name="radio_1_1">1:1</string>
    <string name="radio_16_9">16:9</string>
    <string name="radio_4_3"> 4:3</string>
    <string name="radio_custom">Custom </string>
    <string name="radio_auto">Automatic detection </string>
    <string name="sub_board_direction">- Sub-board direction</string>
    <string name="set_the_left_and_right">Set the left and right directions of the interconnected blackboard writing sub-board to obtain a better display effect of the blackboard writing </string>
    <string name="left_sub_board_configuration">Left sub-board configuration </string>
    <string name="left_sub_panel_to_complete_the_setting">Please swipe on the left subpanel to complete the setting</string>
    <string name="do_not_operate">Do not operate! </string>
    <string name="saving_configuration_file">Is saving the configuration file </string>
    <string name="complete_the_setup">- Complete the setup</string>
    <string name="saved_to">Has been saved to </string>
    <string name="open_text">Open file</string>
    <string name="permissions_text">Please allow the permissions of "auto-start", "storage", "floating window", and "USB" to complete the closing of this page</string>
    <string name="get_permissions_text">Get permission</string>
    <string name="get_usb1_text">Get USB device 1 permission</string>
    <string name="get_usb2_text">Get USB device 2 permission</string>
    <string name="haspermissions1_text">已获取USB设备1权限</string>
    <string name="haspermissions2_text">已获取USB设备2权限</string>

</resources>